Sat Aug 27 08:44:58 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Import RDoc 3.9.4.  Typo and grammar fixes by Luke Gruber.
	  [Ruby 1.9 - Bug #5203]

Sat Aug 27 07:53:34 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/open-uri.rb:  Fix indentation of OpenURI::OpenRead#open.  Use ++
	  instead of `' for method arguments in open-uri.rb

Sat Aug 27 07:22:07 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/pathname/lib/pathname.rb:  Fix typos and grammar mistakes.  Patch
	  by Luke Gruber.  [#5203]
	* ext/pty/lib/expect.rb:  ditto
	* lib/mathn.rb:  ditto
	* lib/net/http.rb:  ditto
	* lib/open-uri.rb:  ditto
	* lib/ostruct.rb:  ditto
	* lib/tempfile.rb:  ditto
	* lib/thread.rb:  ditto
	* lib/weakref.rb:  ditto
	* sample/webrick/httpproxy.rb:  ditto

Sat Aug 27 04:03:18 2011  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_data_to_ary): fix type of variable
	  (long -> unsigned long) to suppress a warning.

Sat Aug 27 04:02:11 2011  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: add a decl. of rb_autoloading_value().

Fri Aug 26 19:12:08 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* variable.c: Make autoload thread-safe. See #921.

	  What's the problem?
	    autoload is thread unsafe. When we define a constant to be
	    autoloaded, we expect the constant construction is invariant. But
	    current autoload implementation allows other threads to access the
	    constant while the first thread is loading a file.

	  What's happening inside?
	    The current implementation uses Qundef as a marker of autoload in
	    Constant table. Once the first thread find Qundef as a value at
	    constant lookup, it starts loading a defined feature. Generally a
	    loaded file overrides the Qundef in Constant table by module/class
	    declaration at very beginning lines of the file, so other threads
	    can see the new Module/Class object before feature loading is
	    finished. It breaks invariant construction.

	  How to solve?